--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chem-generic-ui",
-  "version": "1.1.1",
+  "version": "1.3.0",
   "main": "./dist/bundle.js",
   "license": "AGPL-3.0",
   "private": false,
@@ -21,7 +21,8 @@
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "date-fns": "^2.29.3",
-    "generic-ui-core": "^1.0.0",
+    "generic-ui-core": "^1.3.0",
+    "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-precise-range-plugin": "^1.3.0",
