--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         include:
         - language: javascript
+          build-mode: none
 
     steps:
     - name: Checkout repository
